--- a/index.html
+++ b/index.html
@@ -69,34 +69,81 @@
     </section>
     <section id="personal-experiencia">
         <h2>Experiencia</h2>
+        <img src="./styles/Vectores/Group 35.svg" alt="">
         <div class="Amazon">
             <img src="./styles/Íconos/ant-design_amazon-outlined.svg" alt="icono amazon">
             <div>
-                <h2> Amazon </h2>
-                <h3> UI Designer </h3>
-                <h4> 2015-2017 </h4>
+                <h3> Amazon </h3>
+                <h4> UI Designer </h4>
+                <h5> 2015-2017 </h5>
             </div>
-            <h2>2 años</h2>
+            <h3>2 años</h3>
         </div>
         <div class="Airbnb">
             <img src="./styles/Íconos/cib_airbnb.svg" alt="icono Airbnb">
             <div>
-                <h2> Airbnb </h2>
-                <h3> Senior UX/UI </h3>
-                <h4> 2017-2018 </h4>
+                <h3> Airbnb </h3>
+                <h4> Senior UX/UI </h4>
+                <h5> 2017-2018 </h5>
             </div>
-            <h2>1 año</h2>
+            <h3>1 año</h3>
         </div>
         <div class="Google">
             <img src="./styles/Íconos/akar-icons_google-fill.svg" alt="icono google">
             <div>
-                <h2> Google </h2>
-                <h3> Product Designer </h3>
-                <h4> 2018-Actulidad </h4>
+                <h3> Google </h3>
+                <h4> Product Designer </h4>
+                <h5> 2018-Actulidad </h5>
             </div>
-            <h2>2 años</h2>
+            <h3>2 años</h3>
         </div>
-
+    </section>
+    <section id="personal-habilidades">
+        <h2>Mis habilidades</h2>
+        <div class="Mobile-App">
+            <h3>95%</h3>
+            <p>Mobile app design</p>
+        </div>
+        <div class="Motion-design">
+            <h3>70%</h3>
+            <p>Motion Design</p>
+        </div>
+        <div class="Creacion-Mantenimiento">
+            <h3>90%</h3>
+            <p>Creacion y mantenimiento de sistemas <br />
+                de diseño</p>
+        </div>
+        <div class="Gestion-Proyectos">
+            <h3>90%</h3>
+            <p>Gestion de proyectos</p>
+        </div>
+    </section>
+    <section id="personal-portafolio">
+        <h2>Mi portafolio</h2>
+        <div class="secFirst">
+            <img src="./styles/Logos-Imágenes/image 9-1.jpg" alt="">
+            <h3>Ecommerce Skincare</h3>
+        </div>
+        <div class="secSecond">
+            <img src="./styles/Logos-Imágenes/image 10.jpg" alt="">
+            <h3>Training at home app</h3>
+        </div>
+        <div class="secThird">
+            <img src="./styles/Logos-Imágenes/image 11.jpg" alt="">
+            <h3>Personal writer</h3>
+        </div>
+    </section>
+    <section class="Contacto">
+        <div class="phone">
+            <img src="./styles/Íconos/phone 3.svg" alt="phone">
+            <h3>Nùmero celular</h3>
+            <h4>1234567899</h4>
+        </div>
+        <div class="email">
+            <img src="./styles/Íconos/mail 3.svg" alt="mail">
+            <h3>Email</h3>
+            <h4>example@gmail.com</h4>
+        </div>
     </section>
 </body>
 </html>
