Detalles casi finales

--- a/index.html
+++ b/index.html
@@ -56,44 +56,44 @@
         </p>
         <div class="academic-wrapper">
             <div class="academic-card">
-                <img src="./styles/Logos-Imágenes/logo_academlo 5.jpg" alt="">
-                <p>Academlo</p>
+                <img src="./styles/Logos-Imágenes/logo-academlo.png" alt="">
+                <h3>Academlo</h3>
                 <p>Enero 2022 - Octubre 2022</p>
             </div>
             <div class="academic-card">
-                <img src="./styles/Logos-Imágenes/logo_academlo 5.jpg" alt="">
-                <p>Academlo</p>
+                <img src="./styles/Logos-Imágenes/logo-academlo.png" alt="">
+                <h3>Academlo</h3>
                 <p>Enero 2022 - Octubre 2022</p>
             </div>
         </div>
     </section>
     <section id="personal-experiencia">
         <h2>Experiencia</h2>
-        <img src="./styles/Vectores/Group 35.svg" alt="">
+        <img src="./styles/Vectores/svg.svg" alt="">
         <div class="Amazon">
             <img src="./styles/Íconos/ant-design_amazon-outlined.svg" alt="icono amazon">
             <div>
-                <h3> Amazon </h3>
-                <h4> UI Designer </h4>
-                <h5> 2015-2017 </h5>
+                <h4> Amazon </h4>
+                <h5> UI Designer </h5>
+                <h6> 2015-2017 </h6>
             </div>
             <h3>2 años</h3>
         </div>
         <div class="Airbnb">
             <img src="./styles/Íconos/cib_airbnb.svg" alt="icono Airbnb">
             <div>
-                <h3> Airbnb </h3>
-                <h4> Senior UX/UI </h4>
-                <h5> 2017-2018 </h5>
+                <h4> Airbnb </h4>
+                <h5> Senior UX/UI </h5>
+                <h6> 2017-2018 </h6>
             </div>
             <h3>1 año</h3>
         </div>
         <div class="Google">
             <img src="./styles/Íconos/akar-icons_google-fill.svg" alt="icono google">
             <div>
-                <h3> Google </h3>
-                <h4> Product Designer </h4>
-                <h5> 2018-Actulidad </h5>
+                <h4> Google </h4>
+                <h5> Product Designer </h5>
+                <h6> 2018-Actulidad </h6>
             </div>
             <h3>2 años</h3>
         </div>
@@ -110,7 +110,7 @@
         </div>
         <div class="Creacion-Mantenimiento">
             <h3>90%</h3>
-            <p>Creacion y mantenimiento de sistemas <br />
+            <p>Creacion y mantenimiento de sistemas
                 de diseño</p>
         </div>
         <div class="Gestion-Proyectos">
@@ -133,17 +133,27 @@
             <h3>Personal writer</h3>
         </div>
     </section>
-    <section class="Contacto">
-        <div class="phone">
-            <img src="./styles/Íconos/phone 3.svg" alt="phone">
-            <h3>Nùmero celular</h3>
-            <h4>1234567899</h4>
-        </div>
-        <div class="email">
-            <img src="./styles/Íconos/mail 3.svg" alt="mail">
-            <h3>Email</h3>
-            <h4>example@gmail.com</h4>
+    <section id="Contacto">
+        <h2>Contacto</h2>
+        <div class="phoneMail">
+            <div class="phone">
+                <img src="./styles/Íconos/phone 3.svg" alt="phone">
+                <h3>Nùmero celular</h3>
+                <p>123456789</p>
+            </div>
+                <div class="email">
+                <img src="./styles/Íconos/mail 3.svg" alt="mail">
+                <h3>Email</h3>
+                <p>example@gmail.com</p>
+            </div>
         </div>
     </section>
+    <footer>
+        <div>
+            <p>Maqueetado por JD Gallego</p>
+            <img src="./styles/MiFoto/kisspng-gray-wolf-logo-decal-sticker-wolf-5abff1c6425df7.1792193615225287102719.png" alt="">
+        </div>
+        <p> Diseño de Academlo</p>
+    </footer>
 </body>
 </html>
