--- a/index.html
+++ b/index.html
@@ -18,12 +18,24 @@
                 <img src="./styles/mis iconos/pngegg.png" alt="">
             </label>
             <ul>
-                <li class="home1">Home</li>
-                <li>Acerca de mì</li>
-                <li>Experiencias</li>
-                <li>Mis habilidades</li>
-                <li>Mi portafolio</li>
-                <li>Contacto</li>
+                <li class="home1">
+                  <a href="#about-section" class="nav-item">Home</a>
+                </li>
+                <li>
+                  <a href="#personal-info-section" class="nav-item">  Acerca de mì</a>
+                </li>
+                <li>
+                <a href="#personal-experiencia" class="nav-item">Experiencias</a>
+                </li>
+                <li>
+                <a href="#personal-habilidades" class="nav-item">Mis habilidades</a>
+                </li>
+                <li>
+                <a href="#personal-portafolio" class="nav-item">Mi portafolio</a>
+                </li>
+                <li>
+                <a href="#Contacto" class="nav-item"class="nav-item">Contacto</a>
+                </li>
             </ul>
         </div>
     </nav>
@@ -150,7 +162,7 @@
     </section>
     <footer>
         <div>
-            <p>Maqueetado por JD Gallego</p>
+            <p>Maquetado por JD Gallego</p>
             <img src="./styles/MiFoto/kisspng-gray-wolf-logo-decal-sticker-wolf-5abff1c6425df7.1792193615225287102719.png" alt="">
         </div>
         <p> Diseño de Academlo</p>
